Fix: Update render.yaml to use root directory

--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: dunning-rfp-tracker
     env: node
+    rootDir: .
     buildCommand: npm install
     startCommand: npm start
     envVars:
